kubernetes/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: sample-microservice-service
  namespace: default
spec:
  type: ClusterIP
  selector:
    app: sample-microservice
  ports:
    - protocol: TCP
      port: 80
      targetPort: 8080
