kubernetes/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: sample-microservice-ingress
  namespace: default
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  ingressClassName: nginx
  rules:
    - host: sample-microservice.delphi-demo.local
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: sample-microservice-service
                port:
                  number: 80
